<package>
  <name>manzanita_mk3_driver</name>
  <version>0.0.0</version>
  <description>Provides a ROS interface for a manzanita mk3</description>
  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/manzanita_mk3_driver</url>
  <author>RIVeR-Lab</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>device_driver_base</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>device_driver_base</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rqt_robot_dashboard</run_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>


